# ZgAdmin

./: .cnb.yml  .dockerignore  .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CODEBUDDY.md  CODUBUDDY.md.copy  Dockerfile  README.md  TODO.md  VERSION_MANAGEMENT.md  build.sh  code.mdc.copy  docker-compose.yml  nginx.conf
.cnb/: Dockerfile  settings.yml  web_trigger.yml
.codebuddy/rules/: backend-architecture.md  frontend-architecture.md  infrastructure.md  project-structure.md  pureadmin-utils-quickref.md  security.md
.codebuddy/skills/backend-patterns/: SKILL.md
.codebuddy/skills/frontend-components/: SKILL.md
.codebuddy/skills/frontend-patterns/: SKILL.md
.codebuddy/skills/pureadmin-utils/: SKILL.md
.ide/: Dockerfile
backend/: .coverage  AGENTS.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e99a7fcad44_add_security_features.py  234006d14cce_initial_tables.py  30bcfbeddb70_feat_migrate_datetime_columns_to_.py  582670eaa9ea_initial_create_all_tables.py  a1b2c3d4e5f6_remove_avatar_from_user.py  ec209d42800e_initial_tables.py  f9c9610dbf51_migrate_system_log_module_to_english.py
backend/app/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/base/: base.py
backend/app/api/v1/monitor/: __init__.py  system.py
backend/app/api/v1/monitor/logs/: __init__.py  login.py  operation.py  system.py
backend/app/api/v1/pay/: setting.py
backend/app/api/v1/resource/: __init__.py  file.py
backend/app/api/v1/settings/: __init__.py  email.py  general.py  login.py  security.py
backend/app/api/v1/system/: __init__.py  api.py  depart.py  menu.py  monitor.py  notice.py  role.py  user.py  version.py
backend/app/cli/: __init__.py  __main__.py  generate.py
backend/app/controllers/: config.py  department.py  file.py  logs.py  notice.py  role.py  user.py
backend/app/core/: __init__.py  crud.py  ctx.py  database.py  dependency.py  exceptions.py  init.py  middlewares.py  redis.py  schedule.py
backend/app/models/: __init__.py  api.py  base.py  config.py  department.py  enums.py  file.py  items.py  link.py  login.py  logs.py  menu.py  notice.py  role.py  security.py  user.py
backend/app/seed/: __init__.py  seeder.py
backend/app/seed/data/: departments.py  menus.py
backend/app/settings/: __init__.py  config.py  database.py  log.py
backend/app/utils/: __init__.py  captcha.py  emails.py  file_upload.py  ip.py  jwtt.py  localTime.py  password.py  password_policy.py  signed_url.py  staticFileUtils.py  system_info.py  version.py
backend/app/utils/pay/: wechat.py
backend/config/: base.ini
backend/tests/: README.md  TEST_SUMMARY.md  conftest.py  run_tests.py  test_api_base.py  test_api_base_extended.py  test_api_monitor.py  test_api_resource_file.py  test_api_settings.py  test_api_system.py  test_basic_imports.py  test_controllers.py  test_controllers_file.py  test_controllers_notice_role.py  test_controllers_user.py  test_core.py  test_core_crud.py  test_core_dependency.py  test_core_exceptions.py  test_core_middlewares.py  test_core_redis.py  test_emails.py  test_exceptions.py  test_ip.py  test_jwtt.py  test_jwtt_simple.py  test_localTime.py  test_models.py  test_password.py  test_settings.py  test_utils_captcha.py  test_utils_file_upload.py  test_utils_jwtt.py  test_utils_password.py  test_utils_password_policy.py  test_utils_signed_url.py
config/: base.ini  pay.ini
docs/: package.json
docs/docs/: index.md
docs/docs/.vitepress/: config.mts
docs/docs/guide/: account-settings.md  add-module.md  api-permission.md  customization.md  file-manager.md  monitor.md  notice.md  quick-start.md  security.md  settings.md
frontend/: .env.development  .env.example  .env.version  AGENTS.md  eslint.config.js  index.html  package.json  playwright.config.ts  stylelint.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/: lcov.info
frontend/coverage/lcov-report/: index.html
frontend/e2e/: login.spec.ts
frontend/eslint-rules/: enforce-adaptive-config.js
frontend/locales/: en.yaml  zh-CN.yaml
frontend/mock/: asyncRoutes.ts  login.ts  mine.ts  system.ts
frontend/playwright-report/: index.html
frontend/public/: platform-config.json
frontend/src/: App.vue  main.ts
frontend/src/api/: base.test.ts  base.ts  file.test.ts  file.ts  monitor.test.ts  monitor.ts  notice.test.ts  notice.ts  routes.test.ts  routes.ts  settings.test.ts  settings.ts  system.test.ts  system.ts  user.test.ts  user.ts  utils.test.ts  utils.ts
frontend/tests/: setup.ts
frontend/types/: directives.d.ts  global-components.d.ts  global.d.ts  router.d.ts
scripts/: build-env.sh  build.sh  deploy-docs.sh  deps-check.sh  docker-entrypoint.sh  lint.sh  preview.sh  start.sh  test.sh  update-version.py  update.sh  version-sync.sh
(+176 files in other folders)
