[project]
name = "ZgAdmin"
version = "0.0.3"
description = "A tool made by Python"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.0",
    "bcrypt>=4.0.1",
    "email-validator>=2.3.0",
    "emails>=1.1.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "psutil>=7.2.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.30",
    "pymysql>=1.2.0",
    "redis>=8.0.0",
    "sentry-sdk>=2.61.1",
    "setuptools>=82.0.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[[tool.uv.index]]
url = "https://pypi.cnb.cool/pylover/pypi/-/packages/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/alembic/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
select = [
    # ── 基础必需 ──
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    # ── 安全与质量 ──
    "S",    # flake8-bandit（安全）
    "RUF",  # Ruff 自有规则
    "T10",  # flake8-debugger
    "ERA",  # eradicate（注释掉的代码）
    "PGH",  # pygrep-hooks
    # ── 代码整洁 ──
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "G",    # flake8-logging-format
    # ── Pylint 兼容层（复杂度规则） ──
    "PL",   # pylint 规则集
    # ── 时区安全 ──
    "DTZ",  # flake8-datetimez
    # ── 日志规范 ──
    "LOG",  # flake8-logging
]
ignore = [
    # ── 行长度由 formatter 处理 ──
    "E501",
    # ── Loguru 使用 f-string 是标准做法 ──
    "G004",
    # ── 缺少文档字符串（不强制） ──
    "D100", "D101", "D102", "D103",
    # ── 中文项目：全角标点在字符串/注释/文档中是正常的 ──
    "RUF001",  # 中文字符串中的全角标点
    "RUF002",  # 中文 docstring 中的全角标点
    "RUF003",  # 中文注释中的全角标点
    # ── FastAPI 模式 ──
    "B008",    # 函数默认参数中的函数调用（Depends() 标准用法）
    "PLC0415", # 延迟导入（FastAPI lifespan/中间件中避免循环导入）
    "PLW0603", # global 声明（全局单例模式）
    # ── 业务逻辑可接受的随机数 ──
    "S311",    # 非密码学随机数（验证码、ID 等非安全场景）

]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "ERA", "PL"]
"alembic/**" = ["E501", "ERA", "PL"]
"app/seed/**" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
